[package]
name = "chipcalc-rs"
version = "0.1.0"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
chipcalc_native_rust = { path = "chipcalc_native_rust" }
num-traits = "0.2"